<resources>
    <string name="app_name">Digital Mess</string>
    <string name="jMess">Join a Mess</string>
    <string name="createMAcc">Create Member Account</string>
    <string name="loginMember">Lonin To Your Account</string>
    <string name="mUserName">Username:</string>
    <string name="mPass">Password:</string>
    <string name="mFirstName">First Name:</string>
    <string name="mLastName">Last Name:</string>
    <string name="mWorkingActivity">Working Activity:</string>
    <string name="mGender">Gender:</string>
    <string name="mPhoneNumber">Phone Number:</string>
    <string name="mEmail">Email:</string>
    <string name="title_activity_member_login">Sign in</string>
    <string name="memberLogin">Create Account</string>


    <!-- DrawerLayout Open Close -->
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string-array name="working_activity_Spinner">
        <item>Student</item>
        <item>Employee</item>
    </string-array>
    <string-array name="memberGender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
