<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create__member"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.dipto.digitalmess.Create_Member"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mFirstName"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_first_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="@dimen/textViewSize"
                android:hint="first name"

                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mLastName"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_last_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="@dimen/textViewSize"
                android:hint="last name"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mWorkingActivity"
                android:textSize="@dimen/textViewSize"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                />
        <Spinner
                android:id="@+id/member_working_activity"
                android:layout_width="wrap_content"
                android:drawSelectorOnTop="true"
                android:textAlignment="viewStart"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/textViewSize"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/working_activity_Spinner"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mGender"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        <Spinner
                android:id="@+id/member_gender"
                android:layout_width="wrap_content"
                android:drawSelectorOnTop="true"
                android:textAlignment="viewStart"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/memberGender"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mPhoneNumber"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_phone_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/textViewSize"
                android:hint="phone number"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mEmail"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="@dimen/textViewSize"
                android:hint="email"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mUserName"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_username_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="@dimen/textViewSize"
                android:hint="username"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mPass"
                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                />
        <EditText
                android:id="@+id/member_password_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/textViewSize"
                android:hint="password"
                />

    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
                android:id="@+id/create_member_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/memberLogin"
                android:onClick="clickedOnCreateAccountButton"
                android:layout_margin="30dp"
                />
    </RelativeLayout>

</LinearLayout>
