<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        android:orientation="vertical"
        android:gravity="center"


        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mUserName"
                    android:textSize="@dimen/textViewSize"
                    android:textStyle="bold"
                    />
            <EditText
                    android:id="@+id/member_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="username"
                    />

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mPass"
                    android:textSize="@dimen/textViewSize"
                    android:textStyle="bold"
                    />
            <EditText
                    android:id="@+id/member_password_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:inputType="textPassword"
                    />

        </LinearLayout>


    </LinearLayout>
    <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:textSize="@dimen/buttonTextSize"
            android:text="Login"
            android:onClick="clicked_on_login_button"
            />
    <Button
            android:id="@+id/create_mass_account_button"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/createMAcc"
            android:onClick="createNewMemberAccount"
            />

</LinearLayout>
